<?xml version="1.0"?>
<package format="3">
  <name>ros2_cloud_to_pcd</name>
  <version>1.0.0</version>
  <description>ROS2 Cloud To PCD</description>

  <maintainer email="abrahammonrroy@yahoo.com">amc</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pcl</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
